[gd_scene load_steps=5 format=3 uid="uid://df72ojrh7b03v"]

[ext_resource type="Script" path="res://assets/scripts/ui/options_menu.gd" id="1_kbgg0"]
[ext_resource type="Theme" uid="uid://cjlihoor22i2h" path="res://assets/resources/theme.tres" id="1_ucekv"]
[ext_resource type="PackedScene" uid="uid://bs052wg7xmlj2" path="res://assets/scenes/ui/audio_slider.tscn" id="2_r6amk"]

[sub_resource type="LabelSettings" id="LabelSettings_ew5uo"]
font_size = 50
font_color = Color(0.960784, 0.839216, 0.701961, 1)

[node name="OptionsMenu" type="VBoxContainer"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -233.0
offset_bottom = 233.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_kbgg0")

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Options
"
label_settings = SubResource("LabelSettings_ew5uo")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="AudioSlider" parent="VBoxContainer" instance=ExtResource("2_r6amk")]
layout_mode = 2
bus_name = "Master"

[node name="AudioSlider2" parent="VBoxContainer" instance=ExtResource("2_r6amk")]
layout_mode = 2
bus_name = "Music"
bus_idx = 1

[node name="AudioSlider3" parent="VBoxContainer" instance=ExtResource("2_r6amk")]
layout_mode = 2
bus_name = "SFX"
bus_idx = 2

[node name="AudioSlider4" parent="VBoxContainer" instance=ExtResource("2_r6amk")]
layout_mode = 2
bus_name = "UI"
bus_idx = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_ucekv")

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "UI Size"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="UISizeSlider" type="HSlider" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 1
min_value = 40.0
value = 40.0

[node name="UISizeLabel" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="window_mode" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Fullscreen
"

[node name="back" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Back"
